<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bgScreenBubble"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnTimerBubble"
        android:layout_width="@dimen/icon_main_size"
        android:layout_height="@dimen/icon_main_size"
        android:src="@drawable/ic_timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelinePosition" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt2Second"
        style="@style/regularBoldText"
        android:layout_width="@dimen/icon_time_set_size"
        android:layout_height="@dimen/icon_time_set_size"
        android:gravity="center"
        android:background="@drawable/ic_circle_black"
        android:backgroundTint="@color/txt_light_gray"
        android:layout_marginStart="@dimen/margin_10dp"
        android:layout_marginBottom="@dimen/margin_30dp"
        android:text="@string/txt_2"
        android:textColor="@color/blueA01"
        app:layout_constraintBottom_toTopOf="@+id/btnTimerBubble"
        app:layout_constraintStart_toStartOf="@+id/btnTimerBubble" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt5Second"
        style="@style/regularBoldText"
        android:layout_width="@dimen/icon_time_set_size"
        android:layout_height="@dimen/icon_time_set_size"
        android:gravity="center"
        android:background="@drawable/ic_circle_black"
        android:backgroundTint="@color/txt_light_gray"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:text="@string/txt_5"
        android:textColor="@color/blueA01"
        app:layout_constraintBottom_toTopOf="@+id/btnTimerBubble"
        app:layout_constraintStart_toEndOf="@+id/txt2Second" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt10Second"
        style="@style/regularBoldText"
        android:layout_width="@dimen/icon_time_set_size"
        android:layout_height="@dimen/icon_time_set_size"
        android:gravity="center"
        android:background="@drawable/ic_circle_black"
        android:backgroundTint="@color/txt_light_gray"
        android:layout_marginStart="@dimen/margin_30dp"
        android:text="@string/txt_10"
        android:textColor="@color/blueA01"
        app:layout_constraintBottom_toTopOf="@+id/btnTimerBubble"
        app:layout_constraintStart_toEndOf="@id/txt2Second"
        app:layout_constraintTop_toTopOf="@id/btnTimerBubble" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt15Second"
        style="@style/regularBoldText"
        android:layout_width="@dimen/icon_time_set_size"
        android:layout_height="@dimen/icon_time_set_size"
        android:gravity="center"
        android:background="@drawable/ic_circle_black"
        android:backgroundTint="@color/txt_light_gray"
        android:layout_marginStart="@dimen/margin_30dp"
        android:text="@string/txt_15"
        android:textColor="@color/blueA01"
        app:layout_constraintBottom_toBottomOf="@+id/btnTimerBubble"
        app:layout_constraintStart_toEndOf="@id/txt2Second"
        app:layout_constraintTop_toBottomOf="@id/btnTimerBubble" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt20Second"
        style="@style/regularBoldText"
        android:layout_width="@dimen/icon_time_set_size"
        android:layout_height="@dimen/icon_time_set_size"
        android:gravity="center"
        android:background="@drawable/ic_circle_black"
        android:backgroundTint="@color/txt_light_gray"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_18dp"
        android:text="@string/txt_20"
        android:textColor="@color/blueA01"
        app:layout_constraintStart_toEndOf="@+id/txt2Second"
        app:layout_constraintTop_toBottomOf="@+id/btnTimerBubble" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt30Second"
        style="@style/regularBoldText"
        android:layout_width="@dimen/icon_time_set_size"
        android:layout_height="@dimen/icon_time_set_size"
        android:gravity="center"
        android:background="@drawable/ic_circle_black"
        android:backgroundTint="@color/txt_light_gray"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_36dp"
        android:text="@string/txt_30"
        android:textColor="@color/blueA01"
        app:layout_constraintEnd_toEndOf="@id/txt2Second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTimerBubble" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtNotiTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_24dp"
        android:background="@drawable/bg_border_radius_5dp"
        android:backgroundTint="#9900AAFF"
        android:paddingHorizontal="@dimen/margin_16dp"
        android:paddingVertical="@dimen/margin_8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelinePosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="306dp"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>