<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.browsermirror.BrowserMirrorActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBack"
        android:layout_width="@dimen/margin_24dp"
        android:layout_height="@dimen/margin_24dp"
        android:layout_margin="@dimen/margin_24dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/BoldTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:text="@string/browser_mirror"
        android:textColor="@color/blackA02"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtGuildDoNotLeavePage"
        style="@style/ContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:layout_marginVertical="@dimen/margin_12dp"
        android:background="@drawable/bg_border_radius_5dp"
        android:backgroundTint="@color/blueA01"
        android:gravity="center"
        android:paddingVertical="@dimen/margin_8dp"
        android:text="@string/dont_leave_this_page_before_connected"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtGuildConnectSameWifi"
        style="@style/SmallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:gravity="center"
        android:text="@string/connect_your_devices_to_the_same_wifi_and_turn_off_vpn"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtGuildDoNotLeavePage"
        android:layout_marginTop="@dimen/margin_30dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtWifiName"
        style="@style/ContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_54dp"
        android:gravity="left"
        android:text="SuperTech"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtGuildConnectSameWifi"
        android:layout_marginVertical="@dimen/margin_12dp"
        android:drawableStart="@drawable/ic_wifi"
        android:drawableTint="@color/blueA01"
        android:drawablePadding="8dp"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtGuildOpenThisLink"
        style="@style/regularText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:text="@string/open_this_link_on_other_device_to_mirror"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtWifiName"
        android:layout_marginVertical="@dimen/margin_54dp"
        android:drawablePadding="8dp"
        android:textColor="@color/black" />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtGuildOpenThisLinkDescripion"
        style="@style/SmallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:text="@string/the_ip_address_may_change_every_time_you_connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtGuildOpenThisLink"
        android:drawablePadding="8dp"
        android:textColor="@color/grayA07" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtIpAdress"
        style="@style/regularText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/margin_12dp"
        android:layout_marginHorizontal="@dimen/margin_24dp"
        android:layout_marginVertical="@dimen/margin_12dp"
        android:background="@drawable/bg_txt_ip_address"
        android:text="http://192.168.1.13:5621"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtGuildOpenThisLinkDescripion"
        android:drawablePadding="8dp"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/medium_icon_size"
        android:layout_height="@dimen/medium_icon_size"
        app:layout_constraintTop_toTopOf="@id/txtIpAdress"
        app:layout_constraintBottom_toBottomOf="@id/txtIpAdress"
        app:layout_constraintEnd_toEndOf="@id/txtIpAdress"
        android:src="@drawable/ic_copy"
        android:layout_marginEnd="@dimen/margin_24dp"/>

    <Button
        android:id="@+id/btnStopStream"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_stream"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/txtIpAdress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_border_radius_15dp"
        android:layout_margin="@dimen/margin_54dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>